--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "jade-bootstrap",
+  "name": "pug-bootstrap",
   "version": "1.0.10",
-  "description": "Bootstrap framework written completely using mixins in JADE",
-  "main": "bootstrap.jade",
+  "description": "Bootstrap framework written completely using mixins in pugjs",
+  "main": "bootstrap.pug",
   "scripts": {
     "test": "mocha -R spec"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rajasegar/JADE-Bootstrap.git"
+    "url": "https://github.com/kodji/pug-bootstrap.git"
   },
   "keywords": [
     "jade",
+    "pugjs",
     "bootstrap",
     "twitter",
-    "bootstrap",
     "frontend",
     "ui",
     "framework",
-    "jade",
     "mixins"
   ],
-  "author": "Rajasegar Chandiran",
-  "license": "Apache",
+  "author": "kodji, Rajasegar Chandiran",
+  "license": "SEE LICENSE IN LICENSE",
   "bugs": {
-    "url": "https://github.com/rajasegar/JADE-Bootstrap/issues"
+    "url": "https://github.com/kodji/pug-bootstrap/issues"
   },
-  "homepage": "https://github.com/rajasegar/JADE-Bootstrap",
+  "homepage": "https://github.com/kodji/pug-bootstrap",
   "devDependencies": {
-    "jade": "^1.11.0",
     "jasmine": "^2.4.1",
-    "mocha": "^2.3.4"
+    "mocha": "^2.3.4",
+    "pug": "^2.0.0-beta6"
   }
 }
